--- a/mnmnwag/static/scss/_mixins.scss
+++ b/mnmnwag/static/scss/_mixins.scss
@@ -1,7 +1,7 @@
 // breakpoints, simple and easy
 @mixin media($breakpoint) {
   @if $breakpoint == 'tiny' {
-    @media (max-width: 359px) {
+    @media (max-width: 399px) {
       @content;
     }
   }
