--- a/mnmnwag/static/scss/gallery.scss
+++ b/mnmnwag/static/scss/gallery.scss
@@ -16,4 +16,10 @@
     margin-right: auto;
     max-width: 45rem;
   }
+
+  @include media(tiny) {
+    .block-slides img {
+      max-width: 48%;
+    }
+  }
 }
